Work on BFSearch